Split to misra rules and sonar rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
 project("sonarcloud-test")
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME}
+    main.cpp
+    misra_rules.cpp
+    misra_rules.h
+    sonar_rules.cpp
+    sonar_rules.h
+)
