--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -1,14 +1,15 @@
 name: SonarCloud C/C++ CI
 
 on:
-  push:
-    branches: [ "master", '*-ci' ]
-  workflow_dispatch:
+  workflow_run:
+    workflows: [Build]
+    types: [completed]
 
 jobs:
   build:
     name: sonar_cloud
     runs-on: ubuntu-latest
+    if: github.event.workflow_run.conclusion == 'success'
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper
 
