--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -44,8 +44,12 @@ jobs:
           let fs = require('fs');
           fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/build_wrapper.zip`, Buffer.from(download.data));
 
-    - name: 'Unzip build wrapper output directory'
+    - name: Unzip build wrapper output directory
       run: unzip build_wrapper.zip -d ${{ env.BUILD_WRAPPER_OUT_DIR }}
+
+    - name: 'ls'
+      run:
+        ls -la -R
 
     - name: Run sonar-scanner
       env:
