--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install sonar-scanner and build-wrapper
       uses: SonarSource/sonarcloud-github-c-cpp@v2
 
-    - name: Download build wrapper output directory
+    - name: Download build & build wrapper output directory
       uses: actions/github-script@v6
       with:
         script: |
@@ -33,7 +33,7 @@ jobs:
               run_id: context.payload.workflow_run.id,
           });
           let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
-            return artifact.name == "build_wrapper"
+            return artifact.name == "build"
           })[0];
           let download = await github.rest.actions.downloadArtifact({
               owner: context.repo.owner,
@@ -42,10 +42,10 @@ jobs:
               archive_format: 'zip',
           });
           let fs = require('fs');
-          fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/build_wrapper.zip`, Buffer.from(download.data));
+          fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/build.zip`, Buffer.from(download.data));
 
     - name: Unzip build wrapper output directory
-      run: unzip build_wrapper.zip -d ${{ env.BUILD_WRAPPER_OUT_DIR }}
+      run: unzip build.zip
 
     - name: 'ls'
       run:
