--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -52,6 +52,7 @@ jobs:
 
     - name: "PR info"
       run: |
+        echo "${{ toJson(github.event.workflow_run) }}"
         echo "-Dsonar.pullrequest.key=${{ fromJson(steps.get_pr_data.outputs.data).number }}"
         echo "num: ${{ github.event.workflow_run.pull_requests[0].number }}"
         echo "-Dsonar.pullrequest.branch=${{ fromJson(steps.get_pr_data.outputs.data).head.ref }}"
