--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -14,11 +14,25 @@ jobs:
       BUILD_WRAPPER_OUT_DIR: build_wrapper
 
     steps:
+    - name: Download PR number artifact
+      uses: dawidd6/action-download-artifact@v6
+      with:
+        workflow: Build
+        run_id: ${{ github.event.workflow_run.id }}
+        name: PR_NUMBER
+
+    - name: Read PR_NUMBER.txt
+      id: pr_number
+      uses: juliangruber/read-file-action@v1
+      with:
+        path: ./PR_NUMBER.txt
+
     - name: Request GitHub API for PR data
       uses: octokit/request-action@v2.x
       id: get_pr_data
       with:
-        route: GET /repos/{full_name}/pulls/2
+        route: GET /repos/{full_name}/pulls/{number}
+        number: ${{ steps.pr_number.outputs.content }}
         full_name: ${{ github.event.repository.full_name }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -40,7 +54,7 @@ jobs:
         git remote add upstream ${{ github.event.repository.clone_url }}
         git fetch upstream
         git checkout -B ${{ fromJson(steps.get_pr_data.outputs.data).base.ref }} upstream/${{ fromJson(steps.get_pr_data.outputs.data).base.ref }}
-        git checkout ${{ github.event.workflow_run.head_branch }}
+        git checkout origin/${{ github.event.workflow_run.head_branch }}
         git clean -ffdx && git reset --hard HEAD
 
     - name: "list branches"
