--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -2,7 +2,8 @@ name: SonarCloud C/C++ CI
 
 on:
   workflow_run:
-    workflows: [ "SonarCloud C/C++ CI Trigger" ]
+    workflows:
+      - SonarCloud C/C++ CI Trigger
     types: [ completed ]
 
 jobs:
