--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -1,4 +1,4 @@
-name: SonarCloud C/C++ CI (${{ github.event.workflow_run.run_number }})
+name: SonarCloud C/C++ CI
 
 on:
   workflow_run:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: sonar_cloud
+    name: sonar_cloud(${{ github.event.workflow_run.run_number }})
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success'
     env:
