--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -1,4 +1,5 @@
 name: SonarCloud C/C++ CI
+run-name: "Triggered by #${{ github.event.workflow_run.run_number }}"
 
 on:
   workflow_run:
@@ -7,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: sonar_cloud(${{ github.event.workflow_run.run_number }})
+    name: sonar_cloud
     runs-on: ubuntu-latest
     if: github.event.workflow_run.conclusion == 'success'
     env:
