--- a/.github/workflows/sonar_cloud.yml
+++ b/.github/workflows/sonar_cloud.yml
@@ -111,4 +111,5 @@ jobs:
             --define sonar.scm.revision=${{ github.event.workflow_run.head_sha }} \
             --define sonar.pullrequest.key=${{ env.PR_KEY }} \
             --define sonar.pullrequest.branch=${{ env.PR_BRANCH }} \
-            --define sonar.pullrequest.base=${{ env.PR_BASE }}
+            --define sonar.pullrequest.base=${{ env.PR_BASE }} \
+            --define sonar.branch.name=${{ github.event.workflow_run.head_branch }}
